fixed all styling and media query to recognise non mobile displays

--- a/src/components/Calendar/Calendar.module.scss
+++ b/src/components/Calendar/Calendar.module.scss
@@ -1,21 +1,21 @@
 @import '../../common/colors.scss';
 
 .calendar {
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     gap: 8px;
     padding: 16px;
     margin: 0;
-    border: 1px solid $border;
-    border-radius: 8px;
     color: black;
     background-color: $contrast;
 
     .logo {
         width: 100%;
+        height: 70px;
+        display: flex;
+        align-items: center;
         text-align: left;
-        font-family: 'Roboto Mono', monospace;
         font-size: 30px;
 
         span:nth-child(1) {
@@ -95,5 +95,13 @@
             color: $contrast;
             font-weight: bold;
         }
+    }
+}
+
+@media only screen and (min-width: 700px) {
+    .calendar {
+        max-width: 600px;
+        margin: 0 auto;
+        border: 1px solid $light;
     }
 }
